--- a/template/node12-typescript/package.json
+++ b/template/node12-typescript/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node12-typescript",
   "version": "1.0.0",
-  "description": "",
+  "description": "This is a template-function for typescript node openfaas function for the x86 computer architecture",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
